--- a/C#/DSA/Stack/Stack.csproj
+++ b/C#/DSA/Stack/Stack.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\IStack.cs" />
+    <Compile Include="Contracts\IStackable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stack.cs" />
   </ItemGroup>
